--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
   on-success:
     runs-on: ubuntu-latest
     needs: call-build-test
-    if: ${{ github.event.call-build-test.conclusion == 'success' }}
+    if: ${{ needs.call-build-test.outputs.conclusion == 'success' }}
+    
     steps:
       - run: echo 'The triggering workflow passed'
