--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,7 +18,7 @@ jobs:
                npm run test
       - run: npm run coverage
     outputs:
-         conclusion: 'success'
+         conclusion: success
       
   #merge:
     #runs-on: ubuntu-latest
