--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ jobs:
   
   on-success:
     runs-on: ubuntu-latest
+    if: ${{ needs.call-build-test.result == 'success' }}
     needs: call-build-test
-    #if: ${{ needs.call-build-test.outputs.conclusion == 'success' }}
-    
     steps:
       - run: echo ${{ needs.call-build-test.result }}
