--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,14 @@ jobs:
   
   on-success:
     runs-on: ubuntu-latest
-    if: ${{ needs.call-build-test.result == 'fail' }}
+    if: ${{ needs.call-build-test.result == 'success' }}
     needs: call-build-test
     steps:
-      - run: echo ${{ needs.call-build-test.result }}
+      - uses: actions/checkout@main
+      - name: Merge development -> main
+        uses: devmasx/merge-branch@v1.4.0
+        with:
+          type: now
+          from_branch: development
+          target_branch: main
+          github_token: ${{ github.token }}
