--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         with:
           type: now
           from_branch: development
-          target_branch: main
+          target_branch: master
           github_token: ${{ github.token }}
