--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,13 @@ jobs:
     needs: call-build-test
     steps:
       - uses: actions/checkout@main
-      - name: Merge development -> main
-        uses: devmasx/merge-branch@v1.4.0
+      - name: upload to s3
+      - uses: jakejarvis/s3-sync-action@master
         with:
-          type: now
-          from_branch: development
-          target_branch: master
-          github_token: ${{ github.token }}
+         args: --acl public-read --follow-symlinks --delete
+        env:
+         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
+         SOURCE_DIR: 'public'  
